New Entity for multiple relationships and some fixes