@@ -6,22 +6,21 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.util.UriComponentsBuilder;
 
+import java.util.Collections;
 import java.util.List;
 
 @Service
 public class GutendexService {
 
     private final RestTemplate restTemplate = new RestTemplate();
+    private final String GUTENDEX_API_URL = "https://gutendex.com/books/";
 
     public List<Book> searchBooks(String query) {
-        String GUTENDEX_API_URL = "https://gutendex.com/books/";
-
         UriComponentsBuilder builder = UriComponentsBuilder.fromHttpUrl(GUTENDEX_API_URL)
                 .queryParam("search", query);
 
-        String url = builder.toUriString();
-        GutendexResponse response = restTemplate.getForObject(url, GutendexResponse.class);
+        GutendexResponse response = restTemplate.getForObject(builder.toUriString(), GutendexResponse.class);
 
-        return response != null ? response.getResults() : List.of();
+        return response != null ? response.getResults() : Collections.emptyList();
     }
 }
